fix(media queries): se arregalro el responsive para la version mobile

--- a/css/index.css
+++ b/css/index.css
@@ -245,6 +245,9 @@ main{
 
 
 @media (max-width: 768px) {
+    .navbar .logo{
+        padding-left: 0px;
+    }
     .nav-links {
         display: flex;
         flex-direction: column;
